--- a/src/pages/launch-list/launch-list.html
+++ b/src/pages/launch-list/launch-list.html
@@ -9,9 +9,12 @@
   <ion-navbar>
     <ion-title>Launches</ion-title>
   </ion-navbar>
+
 </ion-header>
+
+
 <ion-content padding>
-  <!-- <ion-list>
+ <!--  <ion-list>
     <ion-item *ngFor="let launch of launches">
       <ion-avatar item-start>
         <img src="{{launch.links.mission_patch_small}}">
@@ -20,15 +23,36 @@
       <p>{{launch.details}}</p>
     </ion-item>
   </ion-list> -->
+
   <ion-card *ngFor="let launch of launches">
-      <img src="{{launch.links.mission_patch_small}}"/>
-      <ion-card-content>
-        <ion-card-title>
-            {{launch.mission_name}}
+    <img src="{{launch.links.mission_patch_small}}"/>
+    <ion-card-content>
+      <ion-card-title>
+        {{launch.mission_name}}
         </ion-card-title>
-        <p>
-            {{launch.details}}
-        </p>
-      </ion-card-content>
-    </ion-card>
+      <p>
+        {{launch.details}}
+      </p>
+      <ion-row no-padding>
+        <ion-col>
+          <button ion-button clear small color="danger" icon-start>
+            <ion-icon name='star'></ion-icon>
+            Favorite
+          </button>
+        </ion-col>
+        <ion-col text-center>
+          <button ion-button clear small color="danger" icon-start>
+            <ion-icon name='musical-notes'></ion-icon>
+            Listen
+          </button>
+        </ion-col>
+        <ion-col text-right>
+          <button ion-button clear small color="danger" icon-start>
+            <ion-icon name='share-alt'></ion-icon>
+            Share
+          </button>
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
