--- a/src/pages/company/company.html
+++ b/src/pages/company/company.html
@@ -14,5 +14,5 @@
   <p>Employees : {{company?.employees}}</p>
   <p>Summary : {{company?.summary}}</p>
   <p>Headquarter address : {{company?.headquarters.address}} {{company?.headquarters.city}} {{company?.headquarters.state}}</p>
-  <p>Vehicles number : <a (click)="linkNav($event, 'LaunchListPage')">{{company?.vehicles}}</a></p>
+  <p>Vehicles number : <a (click)="linkNav('LaunchListPage')">{{company?.vehicles}}</a></p>
 </ion-content>
