--- a/src/pages/launch-list/launch-list.html
+++ b/src/pages/launch-list/launch-list.html
@@ -5,12 +5,25 @@
   Ionic pages and navigation.
 -->
 <ion-header>
+    <ion-navbar>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>Welcome to SpaceXApp</ion-title>
+    </ion-navbar>
 
-  <ion-navbar>
-    <ion-title>Launches</ion-title>
-  </ion-navbar>
-
-</ion-header>
+    <ion-segment [(ngModel)]="page">
+      <ion-segment-button value="0" (click)="selectedTab(0)">
+        All
+      </ion-segment-button>
+      <ion-segment-button value="1" (click)="selectedTab(1)">
+        Past
+      </ion-segment-button>
+      <ion-segment-button value="2" (click)="selectedTab(2)">
+        Up Coming
+      </ion-segment-button>
+    </ion-segment>
+  </ion-header>
 
 
 <ion-content padding>
@@ -24,35 +37,116 @@
     </ion-item>
   </ion-list> -->
 
-  <ion-card *ngFor="let launch of launches">
-    <img src="{{launch.links.mission_patch_small}}"/>
-    <ion-card-content>
-      <ion-card-title>
-        {{launch.mission_name}}
-        </ion-card-title>
-      <p>
-        {{launch.details}}
-      </p>
-      <ion-row no-padding>
-        <ion-col>
-          <button ion-button clear small color="danger" icon-start>
-            <ion-icon name='star'></ion-icon>
-            Favorite
-          </button>
-        </ion-col>
-        <ion-col text-center>
-          <button ion-button clear small color="danger" icon-start>
-            <ion-icon name='musical-notes'></ion-icon>
-            Listen
-          </button>
-        </ion-col>
-        <ion-col text-right>
-          <button ion-button clear small color="danger" icon-start>
-            <ion-icon name='share-alt'></ion-icon>
-            Share
-          </button>
-        </ion-col>
-      </ion-row>
-    </ion-card-content>
-  </ion-card>
+
+  <ion-slides #slider (ionSlideWillChange)="moveButton($event)" class="slide">
+
+    <ion-slide>
+
+  <h3 text-center>All Launches</h3>
+      <ion-card *ngFor="let launch of allLaunches">
+        <img src="{{launch.links.mission_patch_small}}"/>
+        <ion-card-content>
+          <ion-card-title>
+            {{launch.mission_name}}
+            </ion-card-title>
+          <p>
+            {{launch.details}}
+          </p>
+          <ion-row no-padding>
+            <ion-col>
+              <button ion-button clear small color="danger" icon-start>
+                <ion-icon name='star'></ion-icon>
+                Favorite
+              </button>
+            </ion-col>
+            <ion-col text-center>
+              <button ion-button clear small color="danger" icon-start>
+                <ion-icon name='musical-notes'></ion-icon>
+                Listen
+              </button>
+            </ion-col>
+            <ion-col text-right>
+              <button ion-button clear small color="danger" icon-start>
+                <ion-icon name='share-alt'></ion-icon>
+                Share
+              </button>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
+    </ion-slide>
+  
+    <ion-slide>
+        <h3 text-center>Past Launches</h3>
+      <ion-card *ngFor="let launch of pastLaunches">
+        <img src="{{launch.links.mission_patch_small}}"/>
+        <ion-card-content>
+          <ion-card-title>
+            {{launch.mission_name}}
+            </ion-card-title>
+          <p>
+            {{launch.details}}
+          </p>
+          <ion-row no-padding>
+            <ion-col>
+              <button ion-button clear small color="danger" icon-start>
+                <ion-icon name='star'></ion-icon>
+                Favorite
+              </button>
+            </ion-col>
+            <ion-col text-center>
+              <button ion-button clear small color="danger" icon-start>
+                <ion-icon name='musical-notes'></ion-icon>
+                Listen
+              </button>
+            </ion-col>
+            <ion-col text-right>
+              <button ion-button clear small color="danger" icon-start>
+                <ion-icon name='share-alt'></ion-icon>
+                Share
+              </button>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
+    </ion-slide>
+  
+    <ion-slide>
+        <h3 text-center>UpComing Launches</h3>
+      <ion-card *ngFor="let launch of upComingLaunches">
+        <img src="{{launch.links.mission_patch_small}}"/>
+        <ion-card-content>
+          <ion-card-title>
+            {{launch.mission_name}}
+            </ion-card-title>
+          <p>
+            {{launch.details}}
+          </p>
+          <ion-row no-padding>
+            <ion-col>
+              <button ion-button clear small color="danger" icon-start>
+                <ion-icon name='star'></ion-icon>
+                Favorite
+              </button>
+            </ion-col>
+            <ion-col text-center>
+              <button ion-button clear small color="danger" icon-start>
+                <ion-icon name='musical-notes'></ion-icon>
+                Listen
+              </button>
+            </ion-col>
+            <ion-col text-right>
+              <button ion-button clear small color="danger" icon-start>
+                <ion-icon name='share-alt'></ion-icon>
+                Share
+              </button>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
+    </ion-slide>
+  
+  </ion-slides>
+
+  
 </ion-content>
