Get next Launch on homepage + countdown

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,9 @@
       Coming up
     </ion-segment-button>
   </ion-segment>
+  
 </ion-header>
+
 
 <ion-content padding>
   <h3 text-center>Welcome to SpaceXApp</h3>
@@ -37,7 +39,7 @@
     </ion-slide>
   
   </ion-slides>
-
+  <ion-searchbar></ion-searchbar>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
