--- a/src/pages/launch-list/launch-list.html
+++ b/src/pages/launch-list/launch-list.html
@@ -54,20 +54,9 @@
     <ion-slide>
 
   <h3 text-center>All Launches</h3>
-  <ion-searchbar
-  [(ngModel)]="myInput"
-  [showCancelButton]="shouldShowCancel"
-  type="text" ng-model="input.filterUser" placeholder="Search">
+  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   
-  <!-- <ion-item>
-    <ion-label>Filter</ion-label>
-    <ion-select [(ngModel)]="gender">
-      <ion-option value="f">Female</ion-option>
-      <ion-option value="m">Male</ion-option>
-    </ion-select>
-  </ion-item> -->
-</ion-searchbar>
-      <ion-card *ngFor="let launch of allLaunches">
+      <ion-card *ngFor="let launch of searchLaunch">
         <img src="{{launch.links.mission_patch_small}}"/>
         <ion-card-content>
           <ion-card-title>
